--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Bagpipes",
   "maintainers": [
     "Ramsey Ajram <ramsey@decentration.org>",
-    "Filip Kalebo <social@firosolutions.com>"
+    "Filip Kalebo <filip@rustsyndi.cat>"
   ],
   "private": true,
   "version": "0.0.1",
@@ -11,7 +11,10 @@
   "scripts": {
     "build:tailwind": "npx tailwindcss -c ./tailwind.config.js -i ./src/index.css -o dist/output.css",
     "dev": "yarn build:tailwind && vite",
-    "build": "tsc && vite build       ",
+    "gen-gitinfo": "echo export default \"\\\"$(git rev-parse HEAD)\\\"\"  > src/components/Bagpipes/_git_commit.js",
+
+    "build": "gen-gitinfo; tsc && vite build       ",
+    "test": "",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -52,8 +55,8 @@
     "@tippyjs/react": "^4.2.6",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "antd": "^4.18.6",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
@@ -74,6 +77,7 @@
     "socket.io-client": "^4.7.1",
     "styled-components": "^6.0.5",
     "typescript": "^5.1.6",
+    "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "web3": "^1.7.3",
