--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gen-gitinfo": "echo export default \"\\\"$(git rev-parse HEAD)\\\"\"  > src/components/Bagpipes/_git_commit.js",
 
     "build": "gen-gitinfo; tsc && vite build       ",
-    "test": "",
+    "test": "npx tsx  src/tests/run_tests.ts",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
