--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Bagpipes",
   "maintainers": [
     "Ramsey Ajram <ramsey@decentration.org>",
-    "Filip Kalebo <social@firosolutions.com>"
+    "Filip Kalebo <filip@rustsyndi.cat>"
   ],
   "private": true,
   "version": "0.0.1",
