--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dev": "yarn build:tailwind && vite",
     "build": "tsc && vite build       ",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npx tsx src/tests/run_tests.ts"
+
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
