--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "type": "module",
   "scripts": {
     "build:tailwind": "npx tailwindcss -c ./tailwind.config.js -i ./src/index.css -o dist/output.css",
+    "gen-gitinfo": "echo export default \"\\\"$(git rev-parse HEAD)\\\"\"  > src/components/Bagpipes/_git_commit.js",
     "dev": "yarn build:tailwind && vite",
     "build": "tsc && vite build       ",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
